crates/papyrus/src/snapshots/papyrus__parser__tests__parse_function_call.snap
---
source: crates/papyrus/src/parser.rs
expression: "parse_to_tree(\"add(1,2)\")"
---
AST
└╼ add(u256, u256): 
  ├╼ 1:u256
  └╼ 2:u256
