crates/papyrus/src/snapshots/papyrus__parser__tests__parse_function_def_with_return.snap
---
source: crates/papyrus/src/parser.rs
expression: "parse_to_tree(\"\n            function allocate_unbounded() -> memPtr {\n                memPtr := mload(64)\n            }\")"
---
AST
└╼ function definition - allocate_unbounded
  ├╼ params
  ├╼ returns
  │ └╼ memPtr:u256
  └╼ body
    └╼ assign - memPtr:u256
      └╼ mload(u32): u256
        └╼ 64:u32
