crates/papyrus/src/snapshots/papyrus__parser__tests__parse_var_and_add.snap
---
source: crates/papyrus/src/parser.rs
expression: "parse_to_tree(\"let x := add(1,2)\")"
---
AST
└╼ declare - x:u256
  └╼ add(u256, u256): u256
    ├╼ 1:u256
    └╼ 2:u256
