crates/papyrus/src/snapshots/papyrus__parser__tests__parse_var_declaration.snap
---
source: crates/papyrus/src/parser.rs
expression: "parse_to_tree(\"let x := 1\n            let y := 2\")"
---
AST
├╼ declare - x:u256
│ └╼ 1:u256
└╼ declare - y:u256
  └╼ 2:u256
